FreeRADIUS 3.0.26 Thu 07 Oct 2021 12:00:00 EDT urgency=low
	Feature improvements
	* Add dictionary.mellanox
	* Update dictionary.aruba

	Bug fixes

FreeRADIUS 3.0.25 Thu 07 Oct 2021 12:00:00 EDT urgency=medium
	Feature improvements
	* Better debug output when proxying is disabled
	* Updates to support PostgreSQL 14 (#4251)

	Bug fixes
	* Add `correct_escapes` back into default configuration
	* Fix undeclared variable with some compile options (#4246)
	* Quiet erroneous debug output
	* Fix segfault when proxying to zombie home server
	* Fix resolving values to enum strings in rlm_rest (#4167)
	* Fix printing raw values rather than enum strings in rlm_couchbase (#4167)

FreeRADIUS 3.0.24 Wed 29 Sep 2021 12:00:00 EDT urgency=medium
	Feature improvements
	* Add sanitizer options to configure script.
	* Log information needed by Wireshark to decode TLS sessions.
	* Allow more liberal SQL commands in rlm_sql_map.
	* Update dictionary.apc, dictionary.h3c
	* Add new Acct-Status-Type Subsystem-On and Subsystem-Off.
	  See dictionary.iana and
	  https://freeradius.org/rfc/acct_status_type_subsystem.html
	* Add reject_unknown_intermediate_ca.  See mods-available/eap
	* Add dynamic loading of certificates via TLS-Session-Cert-File.
	  See raddb/certs/realms/README.md
	* Add Server Name Indication (SNI) for outbound RadSec connections.
	  See raddb/sites-available/tls, and the home server tls configuration.
	* Support SNI for inbound RadSec connections.  Certificates will
	  be loaded from "realm_dir" in the "tls" section.  SNI will be
	  cached in the TLS-Server-Name-Indication attribute.
	* Preliminary support for haproxy "PROXY" protocol.
	  See sites-available/tls, "proxy_protocol" and doc/antora/modules/howto/pages/protocols/proxy/
	* Generate parse errors in more circumstances when we know that the
	  configuration is wrong.
	* Add "weeklycounter" to sample sqlcounter configuration
	* Add certificate attributes to the request list, even if the certificates