@@ -4,6 +4,7 @@ FreeRADIUS 3.0.26 Thu 07 Oct 2021 12:00:00 EDT urgency=low
 	* Update dictionary.aruba
 
 	Bug fixes
+	* Ensure PBKDF2 always uses at least one iteration
 
 FreeRADIUS 3.0.25 Thu 07 Oct 2021 12:00:00 EDT urgency=medium
 	Feature improvements
